@@ -26,6 +26,7 @@ struct dev_filter {
 	int (*passes_filter) (struct dev_filter * f, struct device * dev);
 	void (*destroy) (struct dev_filter * f);
 	void (*wipe) (struct dev_filter * f);
+	void (*dump) (struct dev_filter * f);
 	void *private;
 	unsigned use_count;
 };
