@@ -49,6 +49,17 @@ static void _composite_destroy(struct dev_filter *f)
 	dm_free(f);
 }
 
+static void _dump(struct dev_filter *f)
+{
+	struct dev_filter **filters = (struct dev_filter **) f->private;
+
+	while (*filters) {
+		if ((*filters)->dump)
+			(*filters)->dump(*filters);
+		filters++;
+	}
+}
+
 struct dev_filter *composite_filter_create(int n, struct dev_filter **filters)
 {
 	struct dev_filter **filters_copy, *cft;
@@ -72,6 +83,7 @@ struct dev_filter *composite_filter_create(int n, struct dev_filter **filters)
 
 	cft->passes_filter = _and_p;
 	cft->destroy = _composite_destroy;
+	cft->dump = _dump;
 	cft->use_count = 0;
 	cft->private = filters_copy;
 
