@@ -1,5 +1,6 @@
 Version 2.02.99 - 
 ===================================
+  Update persistent filter functinality for global filter.
   Override system's global_filter settings for vgimportclone.
   Detect maximum usable size for snapshot for lvresize.
   Creation of snapshot takes at most 100% origin coverage.
